--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^7.1.6",
     "@nestjs/platform-express": "^7.6.15",
+    "bcrypt": "^5.0.1",
+    "mongoose": "^5.13.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
